2006-12-20  Andy Buckley  <andy@insectnation.org>

	* Changed number of curves per half-loop to get nicer gluons and
	photons.

	* Added test1 program (e+ e- -> q q~).
	
        * Various other interface hacks... too many changes this evening
	to remember them all!
	
	* Changed bend() to use a displacement which is always on the left
	of the line, as viewed from start to end.

	* Rewrote labels as the Label class, which computes its offsets
	using the normal to the curve at that point.

	* Neatened up the point, line and blob interfaces a lot with
	additions of get/set/add prefixes in lots of places.

2006-11-24  Andy Buckley  <andy@insectnation.org>

	* Added Fermion and Vertex as aliases to Line and DecoratedPoint.

	* Made visible objects add themselves to the current diagram.

	* Made fd.draw() take a filename argument: PyX canvases are now 
	hidden from the user.
	
	* Added get/set/add methods to Lines for labels and arrows, so
	that the Element.style([...]) methods don't need to be exposed to
	the user.

	* Fixed tadpole loop "visible path" interpretation: more complex
	than the usual case because the line gets split twice.

2006-10-13  Andy Buckley  <andy@insectnation.org>

	* Added command line option handling as class property of
	FeynDiagram. -D enables text-based debugging statements, -V
	enables visual debugging. Accessed via FeynDiagram.options.
	
	* Made it possible for Blobs to be attached to Points.
	
	* Added	"visible line" functionality, so that lines whose ends are
	attached to Blobs will only be deformed and drawn for the portion 
	outside the blobs.
	
2006-09-25  Andy Buckley  <andy@insectnation.org>

	* Moved XML functionality out of classes and into an external
	module. Currently broken.
	
2006-06-30  Georg von Hippel <gmv22@cantab.net>, <vonhippg@uregina.ca>

	* Added rudimentary style support to feynML read/write functions
	
        * Added label support to feynML read/write functions
	